fix z-index on homepage header

--- a/web/assets/cros2/assets/css/custom.css
+++ b/web/assets/cros2/assets/css/custom.css
@@ -31,3 +31,6 @@ a:hover, .login-main a:focus, .login-main a:hover {
     text-align: center;
 }
 
+.cs-z-index-4 {
+    z-index: 4;
+}
